@@ -2,6 +2,7 @@ class ActsAsTaggableOnMigration < ActiveRecord::Migration
   def self.up
     create_table :tags do |t|
       t.column :name, :string
+      t.column :taggings_count, :integer, :default => 0
     end
     
     create_table :taggings do |t|
