@@ -14,6 +14,7 @@ ActiveRecord::Schema.define :version => 0 do
 
   create_table "tags", :force => true do |t|
     t.string "name"
+    t.integer  "taggings_count", :default => 0
   end
   
   create_table :taggable_models, :force => true do |t|
